--- a/软件体系结构 丁箐/复习总结.md
+++ b/软件体系结构 丁箐/复习总结.md
@@ -201,6 +201,7 @@ DSSA 领域特定的架构   重要概念：可重用
 #### Architectural Erosion 架构侵蚀
 
 - 架构侵蚀是将体系结构设计决策引入到系统的描述性体系结构中，但违反了系统的说明性体系结构
+- 架构侵蚀:在计划的架构和实现的实际架构之间观察到的差距
 
 #### Architectural Recovery
 
@@ -335,7 +336,7 @@ DSSA 领域特定的架构   重要概念：可重用
 
    根据可用于实现架构驱动的**策略**，**选择**满足架构驱动的**架构模式**
 
-   实例化模块并从用例中分配功能，并**使用**多个**视图表示** -- 模块分解视图、并发视图、部署视图
+   **实例化模块并从用例中分配功能**，并使用多个视图表示 -- 模块分解视图、并发视图、部署视图
 
    **定义子模块的接口**。分解提供了模块和模块交互类型的约束。在每个模块的接口文档中记录这些信息
 
@@ -1166,15 +1167,21 @@ ROA定义的4个特征：
 - 避免过度分配资源
 - 从不为闲置付费:按使用付费
 
-Serverless is good for short-running，stateless，event-driven  (短时、无状态、事件驱动的)
+- Serverless is good for short-running，stateless，event-driven  (短时、无状态、事件驱动的)
 
-Serverless is not good for long-running，stateful，number crunching  (长时、有状态、数值计算的)
+- Serverless is not good for long-running，stateful，number crunching  (长时、有状态、数值计算的)
 
-Software as a Service(SaaS)：客户使用运行在云上的应用程序
 
-Platform as a Service(PaaS)：提供云中的开发和部署平台
+- Software as a Service(SaaS)：客户使用运行在云上的应用程序
 
-Infrastructure as a Service(IaaS)：为开发人员或系统管理员提供一个虚拟机，他们可以在虚拟机上运行任何操作系统和软件
+- Platform as a Service(PaaS)：提供云中的开发和部署平台
+
+- Infrastructure as a Service(IaaS)：为开发人员或系统管理员提供一个虚拟机，他们可以在虚拟机上运行任何操作系统和软件
+
+- 私有云:由单个组织拥有/运营的云基础设施
+- 公有云:对一般公众可用的云基础设施
+- 社区云:由几个组织共享/支持的云基础设施
+- 混合云:上述的组合
 
 ------
 
