--- a/软件体系结构 丁箐/复习总结.md
+++ b/软件体系结构 丁箐/复习总结.md
@@ -2136,6 +2136,8 @@ While an algorithm always defines a clear set of actions that can achieve some g
 
 ![](img\屏幕截图 2021-01-09 003821.png)
 
+![](E:\backup\Backup-of-postgraduate-study-materials\软件体系结构 丁箐\img\屏幕截图 2021-01-13 113912.png)
+
 #### Pros：
 
 - 单一责任原则。可以将调用操作的类与执行这些操作的类解耦。
