--- a/算法设计与分析 徐云/复习.md
+++ b/算法设计与分析 徐云/复习.md
@@ -186,7 +186,7 @@ chap23-25 不考
 
 ## 贪心算法
 
-1.方法的基本思想和基本步骤
+1.方法的基本思想和基 本步骤
 
 2.贪心算法的正确性保证：满足贪心选择性质
 
@@ -240,6 +240,8 @@ chap23-25 不考
 
 4.二项堆应用（尤其是在哪些图论算法上有应用）
 
+最小生成树算法可以采用二项堆
+
 ## 不相交数据结构
 
 1.不相交数据集概念
@@ -249,6 +251,8 @@ chap23-25 不考
 3.两种表示具体实现和其上操作的时间复杂性
 
 4.不相交集数据结构应用（尤其是在哪些图论算法上有应用）
+
+最小公共祖先问题
 
 ## 图论
 
